Fixed client side edit bug, desc text changed to align left

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -187,6 +187,10 @@ transform: scale(0.9);
     word-wrap: break-word;
 }
 
+#issueDesc a {
+    text-align: left;
+}
+
 #main {
     width: 800px;
     min-height: 600px;
